# nai-71c

./: .envrc  .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: deploy.yaml
01-warcaby/: Cargo.toml  README.md
01-warcaby/src/: ai.rs  game.rs  main.rs
02-termoregulacja/: termoregulacja.py
03-rekomendacje/: Cargo.toml  README.md
03-rekomendacje/clean/: extra_users.json  movies.json  users.json
03-rekomendacje/src/: lib.rs  main.rs
04-klasyfikacja/: Cargo.toml  README.md
04-klasyfikacja/src/: main.rs
05-neural-net/: Cargo.toml  README.md
05-neural-net/src/: main.rs
06-ad-watcher/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
06-ad-watcher/src/: app.html
06-ad-watcher/src/components/: AdCarousel.svelte  AttentionAlert.svelte  CameraFeed.svelte  Header.svelte  ParodyAd.svelte
06-ad-watcher/src/lib/: math.ts
06-ad-watcher/src/routes/: +page.svelte
07-atari/: Cargo.toml  README.md
07-atari/model/skiing/: events.out.tfevents.1769110457.hijiri.22038.0  events.out.tfevents.1769110594.hijiri.22607.0  events.out.tfevents.1769110616.hijiri.22747.0  events.out.tfevents.1769110714.hijiri.23663.0  events.out.tfevents.1769110863.hijiri.24451.0  events.out.tfevents.1769111774.hijiri.27276.0  events.out.tfevents.1769111786.hijiri.27375.0  events.out.tfevents.1769111815.hijiri.27583.0  events.out.tfevents.1769111936.hijiri.27983.0  events.out.tfevents.1769111948.hijiri.28154.0  events.out.tfevents.1769111986.hijiri.28544.0  events.out.tfevents.1769116283.youko.46724.0  events.out.tfevents.1769119003.youko.66593.0  events.out.tfevents.1769119195.youko.71098.0  events.out.tfevents.1769119272.youko.79398.0  events.out.tfevents.1769119292.youko.79679.0  events.out.tfevents.1769119435.youko.80104.0
07-atari/src/: args.rs  config.rs  main.rs
nix/: default.nix  doc.nix  package.nix  roms.nix  sdl12.nix  shell.nix  web.nix
npins/: sources.json
