[package]
name = "rekomendacje"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "rekomendacje"

[dependencies]
discorec.workspace = true
indicatif.workspace = true
inquire.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
ratatui-image.workspace = true
directories.workspace = true
image.workspace = true
